# mcp-servers

./: README.md
src/Scout/: README.md
src/Scout/src/scout/: server.py
src/Son/: README.md
src/docker-mcp/: README.md
src/docker-mcp/src/docker_mcp/: handlers.py  server.py
src/langflow/: README.md  pyproject.toml
src/langflow/src/langflow/: server.py
src/mcp-server-docker/: README.md
src/notes/: README.md
src/s3/: README.md
src/s3/src/s3/: server.py
